<?xml version="1.0"?>
<package format="3">
  <name>cartographer_3d</name>
  <version>0.0.1</version>
  <description>3D SLAM config for Unitree Go2 + L1 using cartographer_ros.</description>

  <maintainer email="you@example.com">unitree</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
